ADD: Project docs
