# src/controllers/project/get.ts
@@ -11,9 +11,15 @@ const getAllProjects: Interfaces.Controller.Async = async (_req, res, next) => {
 };
 
 const getProject: Interfaces.Controller.Async = async (req, res, next) => {
-  const { id } = req.params;
-  const project = await prisma.project.findUnique({ where: { id } });
-  if (!project) return next(Errors.Project.projectNotFound);
+  const { projectId } = req.params;
+  console.log(req.path);
+  if (!projectId) {
+    return next(Errors.Project.invalidProjectId);
+  }
+  const project = await prisma.project.findUnique({ where: { id: projectId } });
+  if (!project) {
+    return next(Errors.Project.projectNotFound);
+  }
   return res.json(Utils.Response.Success(project));
 };
 
@@ -22,20 +28,24 @@ const getProjectApplications: Interfaces.Controller.Async = async (
   res,
   next
 ) => {
-  const { id } = req.params;
+  const { projectId } = req.params;
   const applications: Interview[] = [];
 
-  const project = await prisma.project.findUnique({ where: { id } });
+  if (!projectId) {
+    return next(Errors.Project.invalidProjectId);
+  }
+
+  const project = await prisma.project.findUnique({ where: { id: projectId } });
   if (!project) return next(Errors.Project.projectNotFound);
 
   const sessions = await prisma.interviewSession.findMany({
-    where: { projectId: id },
+    where: { projectId },
     include: {
       interviewApplications: true,
     },
   });
   //TODO: replace with sessesion error
-  if (!sessions) return next();
+  if (!sessions) return next(Errors.Session.sessionNotFound);
 
   sessions.forEach((session) => {
     applications.concat(session.interviewApplications);
